--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 <div id="main">
     <div id="back">
-        <img src="./andre-furtado-RoDhGE3AykA-unsplash.jpg" alt="">
+        <img src="andre-furtado-RoDhGE3AykA-unsplash.jpg" alt="">
     </div>
     <div id="front">
             <div class="main-area">
                 <div id="nav">
-                    <div id="nleft"><a href="file:///F:/Coding/landingPage.html"><img src="./dlf.pt-maui-jim-logo-png-2929068.png" alt="LOGO"></a>
+                    <div id="nleft"><a href="file:///F:/Coding/landingPage.html"><img src="dlf.pt-maui-jim-logo-png-2929068.png" alt="LOGO"></a>
                     <a href="https://india.ray-ban.com/sunglasses-clp">Products</a>
                     <a href="https://en.wikipedia.org/wiki/Ray-Ban">About</a>
                 </div>
@@ -35,7 +35,7 @@
                         <p>"Elevate your allure with Ray Bon shades—where luxury meets your gaze."</p>
                         <br>
                         <div class="img">
-                           <img src="./smiling-pretty-lady-with-red-lips-wearing-red-cap-dark-jacket-is-looking-camera-while-walking-city-sunny-warm-day.jpg" alt="">
+                           <img src="smiling-pretty-lady-with-red-lips-wearing-red-cap-dark-jacket-is-looking-camera-while-walking-city-sunny-warm-day.jpg" alt="">
                         </div>
                         <br>
                     <p>Discover Ray Bon, your gateway to unparalleled luxury in eyewear. Our collection of exquisite sunglasses exemplifies opulence and style. Elevate your look with our handcrafted, high-quality frames. Experience the epitome of luxury, only at Ray Bon.
