Update2 index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rayban</title>
     <link rel="stylesheet" href="landingPage.css">
-    <link rel="icon" href="C:\Users\admin\Downloads\vecteezy_ray-ban-logo-transparent-png_24806396_333.png">
+    <link rel="icon" href="dlf.pt-maui-jim-logo-png-2929068.png">
 </head>
 <body>
 <div id="main">
